# app/Http/Controllers/Auth/UserController.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Http\Controllers\AUth;
+
+use App\Http\Controllers\Controller;
+use App\Http\Requests\UserCreateRequest;
+use App\Http\Resources\UserResource;
+use App\Models\User;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Hash;
+
+class UserController extends Controller
+{
+    public function register(UserCreateRequest $request): JsonResponse
+    {
+        $data = $request->validated();
+
+        $user = new User($data);
+        $user->password = Hash::make($data["password"]);
+        $user->save();
+
+        return (new UserResource($user))->response()->setStatusCode(201);
+    }
+}
