# routes/v1/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AUth\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -14,6 +15,4 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
+Route::post('register', [UserController::class, 'register']);
